changed div to article

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
   </head>
   <body>
-    <div class="whole">
+    <article class="whole">
       <section class="heading">
         <h1 class="heading-primary">
           Reliable, efficient delivery
@@ -247,7 +247,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </article>
     <footer>
       <p class="attribution">
         Challenge by
